--- a/.github/workflows/triage.yml
+++ b/.github/workflows/triage.yml
@@ -17,6 +17,6 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              labels: ["triage-new_issue"]
+              labels: ["triage-new-issue"]
             })
 
