--- a/.github/ISSUE_TEMPLATE/add_scroll_to.yaml
+++ b/.github/ISSUE_TEMPLATE/add_scroll_to.yaml
@@ -1,13 +1,13 @@
-name: Add Scroll to some tool or library
-description: This brings Scroll compatibility into an existing library or project
-title: Add Scroll to
+name: SushiSwap
+description: Allow the trading of tokens on Scroll network.
+title: Add Scroll to SushiSwap
 labels: ["integration"]
 body:
   - type: input
     id: integration_name
     attributes:
-      label: "Name of the project"
-      placeholder: "Example: wagmi"
+      label: SushiSwap
+      placeholder: DEX
     validations:
       required: true
   - type: dropdown
@@ -23,14 +23,14 @@ body:
     id: integration_site_link
     attributes:
       label: "Site of the project"
-      placeholder: "https://wagmi.sh/"
+      placeholder: https://www.sushi.com/
     validations:
-      required: false
+      required: true
   - type: input
     id: integration_github_link
     attributes:
       label: "Github repository of the project"
-      placeholder: "https://github.com/wagmi-dev/wagmi"
+      placeholder: https://github.com/sushiswap
     validations:
       required: true
   - type: dropdown
@@ -40,7 +40,6 @@ body:
       description: "On which networks should this be supported? (You can pick multiple options)"
       multiple: true
       options:
-        - Scroll Testnet - Sepolia
         - Scroll Mainnet
     validations:
       required: true
