--- a/.github/ISSUE_TEMPLATE/add_scroll_to.yaml
+++ b/.github/ISSUE_TEMPLATE/add_scroll_to.yaml
@@ -1,13 +1,13 @@
-name: Add Scroll to some tool or library
-description: This brings Scroll compatibility into an existing library or project
-title: Add Scroll to
+name: Add Scroll to Holdstation
+description: This brings Scroll compatibility into the best mobile trading platform
+title: Add Scroll to Holdstation
 labels: ["integration"]
 body:
   - type: input
-    id: integration_name
+    id: Holdstation
     attributes:
-      label: "Name of the project"
-      placeholder: "Example: wagmi"
+      label: Holdstation Integration
+      placeholder: Holdstation
     validations:
       required: true
   - type: dropdown
@@ -23,14 +23,14 @@ body:
     id: integration_site_link
     attributes:
       label: "Site of the project"
-      placeholder: "https://wagmi.sh/"
+      placeholder: www.holdstation.com
     validations:
       required: false
   - type: input
     id: integration_github_link
     attributes:
       label: "Github repository of the project"
-      placeholder: "https://github.com/wagmi-dev/wagmi"
+      placeholder: "https://github.com/holdstation-dev/holdstation"
     validations:
       required: true
   - type: dropdown
@@ -40,8 +40,7 @@ body:
       description: "On which networks should this be supported? (You can pick multiple options)"
       multiple: true
       options:
-        - Scroll Testnet - Sepolia
-        - Scroll Mainnet
+      - Scroll Mainnet
     validations:
       required: true
   - type: textarea
